--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -44,6 +44,7 @@ body {
     justify-content: space-around;
     padding: 0;
     margin: 0;
+    transform: scale(0.8);
 }
 
 .articles ol li {
@@ -80,8 +81,8 @@ body {
 
 .config{
 	align-items: center;
-	-webkit-perspective: 1000px;
-	perspective: 1000px;
+	-webkit-perspective: 300px;
+	perspective: 300px;
 	width: 100%;
 	padding: 0;
 }
